apps/syncthing/syncthing.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: syncthing
          image: docker.io/syncthing/syncthing:2.0.16@sha256:4a961394ca471f4e48f31ad2cef50697e502c8799e2e98477a1c3844e0c5bc54
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          volumeMounts:
            - name: volume
              mountPath: /var/syncthing
          ports:
            - name: http
              containerPort: 8384

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
